name:                nas-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/toriumi0118/nas-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleServer
                     , DownloadSchedule
                     , Lesson01
                     , Lesson02
                     , Lesson03
                     , Lesson04
                     , Lesson05
                     , Lesson06
                     , Lesson07
                     , Lesson08
                     , Lesson09
                     , Lesson10
                     , Lesson11
                     , Lesson12
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , http-types
                     , http-conduit
                     , html-conduit
                     , xml-conduit
                     , text
                     , bytestring
  default-language:    Haskell2010

executable nas-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nas-server
  default-language:    Haskell2010

test-suite nas-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nas-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toriumi0118/nas-backend
